<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainweixin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#eee" > 
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >
    
	<Button
	    android:id="@+id/btn_setbluetooth"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/btn_style_linkcube_big_pink_button"
	    android:text="@string/str_setting_btntitle_settingbt"
	    android:textSize="25dp"
	    android:onClick="GoToBTSetting" />
	
	<Button
	    android:id="@+id/btn_aboutus"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/btn_pushmessage"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/btn_style_linkcube_big_pink_button"
	    android:text="@string/str_setting_btntitle_aboutus"
	    android:textSize="25sp"
	    android:onClick="GoToAboutUS" />
	
	<Button
	    android:id="@+id/btn_aboutus"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/btn_pushmessage"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/btn_style_linkcube_big_pink_button"
	    android:text="使用说明"
	    android:textSize="25sp"
	    android:onClick="GoToTutorial" />
	
	<Button
	    android:id="@+id/btn_gobuy"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/btn_aboutus"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/btn_style_linkcube_big_pink_button"
	    android:text="@string/str_setting_btntitle_gotobuy"
	    android:textSize="25sp" />
	
	<Button
	    android:id="@+id/btn_upgrade"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/btn_aboutus"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:visibility="gone"
	    android:background="@drawable/btn_style_linkcube_big_pink_button"
	    android:text="@string/str_setting_btntitle_upgrade"
	    android:textSize="25sp"
	    android:onClick="GoToUpgrade" />
	
	<Button
	    android:id="@+id/btn_loginout"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/btn_gobuy"
	    android:layout_marginTop="22dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginLeft="20dp"
	    android:background="@drawable/btn_style_linkcube_big_gray_button"
	    android:text="@string/str_setting_btntitle_login"
	    android:textSize="25sp" />

</LinearLayout>
<RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@drawable/bg_top_bar" >             
      
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="2dp" >
        	
            <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="55dp"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	

                <ImageView
                    android:id="@+id/img_weixin"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:clickable="true"
                    android:src="@drawable/tab_linkcube_clicked" />

        	 </LinearLayout>
        	 <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="55dp"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/img_address"
        			android:layout_width="55dp"
        			android:layout_height="55dp"        	     	
        			android:clickable="true"
        			android:src="@drawable/tab_personalinfo_released" />
        	 </LinearLayout>
        	 <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="55dp"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/img_friends"
        			android:layout_width="55dp"
        			android:layout_height="55dp"        	     	
        			android:clickable="true"
        			android:src="@drawable/tab_friends_released" />
        	 </LinearLayout>
        	 
        	 <LinearLayout
            	android:layout_width="wrap_content"
            	android:layout_height="55dp"
              	android:gravity="center_horizontal"
              	android:orientation="vertical"
              	android:layout_weight="1">               	
                <ImageView
            		android:id="@+id/img_settings"
        			android:layout_width="55dp"
        			android:layout_height="55dp"        	     	
        			android:clickable="true"
        			android:src="@drawable/tab_settings_released" />
        	 </LinearLayout>        
        </LinearLayout>     
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:layout_alignParentTop="true"
    	android:layout_above="@id/main_bottom"       
        android:orientation="vertical" >
        
        <android.support.v4.view.ViewPager
        	android:id="@+id/tabpager"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center" > 
        </android.support.v4.view.ViewPager>  
    </LinearLayout>
</RelativeLayout>
